--- a/index.htm
+++ b/index.htm
@@ -33,7 +33,7 @@
 					</ul>
 				</div>
 				<div class="col-md-4 hidden js-result-command">
-					<textarea class="js-result-textarea" rows="20" cols="50" autocomplete="off">
+					<textarea class="js-result-textarea" rows="20" cols="50" autocomplete="off" readonly>
 					</textarea>
 				</div>
 			</div>
